# trustabl

./: .gitattributes  .gitignore  .goreleaser.yaml  .mcp.json  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  COVERAGE.md  Dockerfile  GEMINI.md  Makefile  README.md  TELEMETRY.md  Trustabl_Tool_Hardening_Fields_Spec.xlsx  gemini-extension.json  go.mod  go.sum  llms.txt
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: marketplace.json  plugin.json
.github/stats/: download-history.json
.github/workflows/: attestation.yml  download-history.yml  release.yml  schema-staleness.yml  test.yml
.superpowers/plans/: 2026-05-14-yaml-detection-rules.md
.superpowers/specs/: 2026-05-14-yaml-detection-rules-design.md
agents/: trustabl.md
cmd/karenctl/: main.go
cmd/rulesctl/: main.go  rulesctl_test.go
cmd/trustabl/: attest.go  capabilities.go  enrich.go  generate.go  llm.go  llm_test.go  mcp.go  (+11 more)
examples/: PROVENANCE.md
hooks/: hooks.json
scripts/: attest-e2e.sh  check-rules-sync.sh  check-trustabl.sh  lib-trustabl.sh  trustabl-mcp.sh
testdata/corpus/research-agent/: pyproject.toml
testdata/corpus/research-agent/.claude/commands/: competitive-analysis.md  market-trends.md  research.md  summarize.md
testdata/corpus/research-agent/.claude/skills/pdf/: LICENSE.txt  REFERENCE.md
testdata/corpus/research-agent/research_agent/: agent.py
testdata/corpus/research-agent/research_agent/prompts/: data_analyst.txt  researcher.txt
testdata/corpus/research-agent/research_agent/utils/: message_handler.py  subagent_tracker.py
(+588 files in other folders)
